<resources>
    <string name="app_name">HomePets</string>
    <string name="informacoes_da_ong">Informações da ONG</string>
    <string name="nome_ong">Nome da ONG</string>
    <string name="cnpj">CNPJ</string>
    <string name="endereco">Endereço</string>
    <string name="cep">Cep</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="confirmar_button">confirmar</string>
</resources>
